--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dapps-react-ui",
-  "version": "0.0.679",
+  "version": "0.0.680",
   "description": "React ui reusable components for dapps",
   "main": "./build/index.js",
   "scripts": {
@@ -17,6 +17,7 @@
     "testOnce": "mocha 'src/**/*.spec.js'",
     "prebuild": "npm run clean",
     "build": "NODE_ENV=production webpack --progress --colors",
+    "localPublish": "npm run build && npm publish",
     "clean": "rm build -rf"
   },
   "repository": {
