add extension link to topbar (unstyled)

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
+    "webpack-error-notification": "^0.1.6",
     "webpack-hot-middleware": "^2.7.1"
   },
   "dependencies": {
