--- a/chrome/manifest.prod.json
+++ b/chrome/manifest.prod.json
@@ -9,6 +9,14 @@
     "default_title": "Parity Signer UI",
     "default_popup": "popup.html"
   },
+  "externally_connectable": {
+    "matches": [
+      "http://localhost/*",
+      "http://home.parity/",
+      "http://parity.parity/",
+      "http://wallet.parity/"
+    ]
+  },
   "icons": { 
     "16": "img/icon-16.png",
     "19": "img/icon-19.png",
