--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   },
   "dependencies": {
     "bluebird": "^3.3.4",
+    "chrome-badge-animator": "0.0.0",
     "classnames": "^2.1.3",
     "exports-loader": "0.6.3",
     "js-sha3": "^0.5.2",
