--- a/chrome/manifest.prod.json
+++ b/chrome/manifest.prod.json
@@ -31,6 +31,11 @@
   "background": {
     "page": "background.html"
   },
-  "permissions": [ "storage", "proxy" ],
-  "content_security_policy": "default-src 'self'; font-src 'self' data:; connect-src ws://127.0.0.1:*; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;"
+  "permissions": [
+    "storage",
+    "proxy",
+    "*://*.parity/*",
+    "*://127.0.0.1/*"
+  ],
+  "content_security_policy": "default-src 'self'; font-src 'self' data:; connect-src http://*.parity http://127.0.0.1:* ws://127.0.0.1:*; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;"
 }
