--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,17 @@
 sudo: false
 language: node_js
+
 node_js:
   - '5'
 
-matrix:
-  env:
-    - PROJECT=status
-    - PROJECT=home
-    - PROJECT=components
-    - PROJECT=signer
-    - SCRIPT=lint
-    - SCRIPT=testOnce
-    - SCRIPT=coveralls
+env:
+  - PROJECT=status
+  - PROJECT=home
+  - PROJECT=components
+  - PROJECT=signer
+  - SCRIPT=lint
+  - SCRIPT=testOnce
+  - SCRIPT=coveralls
 
 cache:
   directories:
@@ -22,6 +22,7 @@ cache:
 
 script:
   - cd $PROJECT
+  - npm install
   - if [ "$SCRIPT" ]; then npm run $SCRIPT; fi
   # - if [ "$E2E" ] && [ "$SAUCE_ACCESS_KEY" ]; then npm run startTest & sleep 25 && npm run $E2E; fi
 
