--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,15 @@ rust:
   - stable
   - beta
   - nightly
+
 matrix:
+  fast_finish: true
   allow_failures:
     - rust: nightly
+  env:
+    - PROJECT=parity-dapps-builtins
+
+script:
+  - cargo build -p $PROJECT
+  - cargo test --release -p $PROJECT
+
