--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "genZip": "npm run build && npm run compress",
     "compress-keygen": "crx keygen",
     "clean": "rimraf build/ dev/ *.zip *.crx",
-    "lint": "eslint app chrome test scripts",
+    "lint": "eslint . --ignore-path .gitignore",
     "test": "npm run testOnce -- -w",
     "testOnce": "mocha 'chrome/**/*.spec.js'"
   },
@@ -40,6 +40,10 @@
     "crx": "^3.0.3",
     "css-loader": "^0.23.1",
     "eslint": "^2.5.3",
+    "eslint-config-semistandard": "^6.0.2",
+    "eslint-config-standard": "^5.3.1",
+    "eslint-plugin-promise": "^1.3.2",
+    "eslint-plugin-standard": "^1.3.2",
     "json-loader": "0.5.4",
     "minimist": "^1.2.0",
     "mocha": "^2.4.5",
