--- a/home/Cargo.toml
+++ b/home/Cargo.toml
@@ -11,8 +11,8 @@ default = ["with-syntex"]
 with-syntex = ["parity-dapps/with-syntex"]
 
 [build-dependencies]
-parity-dapps = { git = "https://github.com/ethcore/parity-dapps-rs.git", version = "0.3" }
+parity-dapps = { path = "../dapps" }
 
 [dependencies]
-parity-dapps = { git = "https://github.com/ethcore/parity-dapps-rs.git", version = "0.3" }
+parity-dapps = { path = "../dapps" }
 
