--- a/status/src/lib.rs.in
+++ b/status/src/lib.rs.in
@@ -42,5 +42,5 @@ impl WebApp for App {
 
 #[test]
 fn test_js() {
-	::parity_dapps::js::test()
+	::parity_dapps::js::test(concat!(env!("CARGO_MANIFEST_DIR"), "/web"))
 }
