--- a/status/web/package.json
+++ b/status/web/package.json
@@ -18,7 +18,7 @@
     "nightwatch": "NODE_ENV=tests nightwatch",
     "nightwatchCI": "npm run nightwatch  -- -e saucelabs",
     "prebuild": "npm run clean",
-    "build": "NODE_ENV=production webpack --progress --colors && cp Cargo.toml static",
+    "build": "NODE_ENV=production webpack --bail --progress --colors",
     "clean": "rm static -rf || true",
     "prezip": "npm run build",
     "zip": "cd static && zip ../status.zip * -r",
@@ -38,7 +38,7 @@
     "babel-core": "^6.5.2",
     "babel-eslint": "6.0.2",
     "babel-loader": "^6.2.3",
-    "babel-plugin-transform-runtime": "^6.5.2",
+    "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
