--- a/status/web/package.json
+++ b/status/web/package.json
@@ -11,10 +11,8 @@
     "commit": "commit-wizard",
     "coveralls": "npm run testCoverage && coveralls < coverage/lcov.info",
     "lint": "eslint --ignore-path .gitignore .",
-    "ci": "npm run lint & npm run testOnce & npm run nightwatchCI",
-    "test": "npm run testOnce -- -w",
+    "test": "mocha 'client/**/*.spec.js'",
     "testCoverage": "istanbul cover _mocha -- 'client/**/*.spec.js'",
-    "testOnce": "mocha 'client/**/*.spec.js'",
     "nightwatch": "NODE_ENV=tests nightwatch",
     "nightwatchCI": "npm run nightwatch  -- -e saucelabs",
     "prebuild": "npm run clean",
@@ -110,19 +108,5 @@
     "rlp": "2.0.0",
     "store": "1.3.20",
     "web3": "^0.15.3"
-  },
-  "config": {
-    "pre-git": {
-      "pre-commit": [
-        "./scripts/check-master.sh"
-      ],
-      "pre-push": [
-        "npm run lint",
-        "npm run testOnce"
-      ],
-      "post-commit": [],
-      "post-checkout": [],
-      "post-merge": []
-    }
   }
 }
