--- a/components/package.json
+++ b/components/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "dapps-react-ui",
+  "name": "dapps-react-components",
   "version": "0.0.684",
-  "description": "React ui reusable components for dapps",
+  "description": "React Reusable Components For Dapps",
   "main": "./build/index.js",
   "scripts": {
-    "install": "napa alexvandesande/blockies",
     "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3020",
-    "startPerf": "NODE_ENV=perf-debug npm start",
-    "startTest": "NODE_ENV=tests npm start",
     "webpack": "webpack",
-    "commit": "commit-wizard",
     "coveralls": "npm run testCoverage && coveralls < coverage/lcov.info",
     "lint": "eslint --ignore-path ../.gitignore .",
-    "test": "npm run testOnce -- -w",
+    "test": "mocha 'src/**/*.spec.js'",
     "testCoverage": "istanbul cover _mocha -- 'src/**/*.spec.js'",
-    "testOnce": "mocha 'src/**/*.spec.js'",
     "prebuild": "npm run clean",
-    "build": "NODE_ENV=production webpack --progress --colors",
+    "build": "webpack --bail --progress --colors",
     "localPublish": "npm run build && npm publish",
     "clean": "rm build -rf"
   },
@@ -76,7 +71,6 @@
     "material-ui": "^0.15.0",
     "mocha": "^2.4.5",
     "mock-local-storage": "1.0.2",
-    "napa": "2.3.0",
     "postcss-loader": "^0.8.1",
     "react": "^15.0.0",
     "react-addons-css-transition-group": "^15.1.0",
@@ -104,21 +98,9 @@
   },
   "dependencies": {
     "bignumber.js": "^2.3.0",
+    "blockies": "github:tomusdrw/blockies",
     "classnames": "^2.2.3",
     "ethereum-rpc-json": "*",
-    "lodash.isequal": "^4.2.0",
-    "napa": "^2.3.0"
-  },
-  "config": {
-    "pre-git": {
-      "pre-commit": [],
-      "pre-push": [
-        "npm run lint",
-        "npm run testOnce"
-      ],
-      "post-commit": [],
-      "post-checkout": [],
-      "post-merge": []
-    }
+    "lodash.isequal": "^4.2.0"
   }
 }
