--- a/extension/package.json
+++ b/extension/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "parity-sysui-chrome-extension",
-  "version": "0.0.0",
-  "description": "Parity system ui - chrome extension",
+  "name": "parity-web-extension",
+  "version": "0.1.0",
+  "description": "Parity Web Extension",
   "scripts": {
     "start": "node scripts/dev",
     "build": "NODE_ENV=production node scripts/build",
@@ -73,7 +73,7 @@
     "lodash.assign": "^4.0.9",
     "lodash.isequal": "4.2.0",
     "material-ui": "^0.15.0",
-    "parity-sysui-app": "0.0.26",
+    "parity-signer": "../signer/web",
     "react": "^15.0.2",
     "react-dock": "^0.2.3",
     "react-dom": "^15.0.2",
