--- a/status/web/package.json
+++ b/status/web/package.json
@@ -95,16 +95,17 @@
     "browser-request": "0.3.3",
     "bytes": "2.3.0",
     "dapp-styles": "^0.2.2",
-    "dapps-react-ui": "0.0.54",
+    "dapps-react-components": "../../components",
     "format-json": "1.0.3",
     "format-number": "2.0.1",
     "history": "2.1.1",
     "lodash": "4.11.1",
     "marked": "^0.3.5",
     "material-ui": "^0.15.0",
-    "react-addons-css-transition-group": "15.0.2",
+    "react-addons-css-transition-group": "^15.0.2",
     "react-copy-to-clipboard": "4.1.0",
     "react-tap-event-plugin": "1.0.0",
+    "react-tooltip": "^3.0.8",
     "rlp": "2.0.0",
     "store": "1.3.20",
     "web3": "^0.15.3"
