Renaming signer directory

--- a/signer/web/package.json
+++ b/signer/web/package.json
@@ -2,15 +2,15 @@
   "name": "parity-signer",
   "version": "0.0.27",
   "description": "reusable app for Parity's system UIs",
-  "main": "./build/index.js",
+  "main": "./src/app.js",
   "scripts": {
     "start": "webpack-dev-server -d --history-api-fallback --open --hot --inline --progress --colors --port 3001",
     "startTest": "NODE_ENV=tests npm start",
     "webpack": "webpack --progress --colors",
     "coveralls": "npm run testCoverage && coveralls < coverage/lcov.info",
     "lint": "eslint --ignore-path ../.gitignore .",
-    "test": "mocha 'app/**/*.spec.js'",
-    "testCoverage": "istanbul cover _mocha -- 'app/**/*.spec.js'",
+    "test": "mocha 'src/**/*.spec.js'",
+    "testCoverage": "istanbul cover _mocha -- 'src/**/*.spec.js'",
     "nightwatch": "NODE_ENV=tests nightwatch",
     "nightwatchCI": "npm run nightwatch  -- -e saucelabs",
     "prebuild": "npm run clean",
