--- a/components/package.json
+++ b/components/package.json
@@ -98,7 +98,7 @@
   },
   "dependencies": {
     "bignumber.js": "^2.3.0",
-    "blockies": "github:tomusdrw/blockies",
+    "blockies": "git+https://github.com/tomusdrw/blockies#master",
     "classnames": "^2.2.3",
     "ethereum-rpc-json": "*",
     "lodash.isequal": "^4.2.0"
