--- a/home/web/package.json
+++ b/home/web/package.json
@@ -49,7 +49,7 @@
   "dependencies": {
     "babel-polyfill": "^6.9.1",
     "bignumber.js": "2.3.0",
-    "blockies": "github:tomusdrw/blockies",
+    "blockies": "git+https://github.com/tomusdrw/blockies#master",
     "classnames": "^2.2.3",
     "exports-loader": "^0.6.3",
     "lodash.every": "4.4.0",
