--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,8 @@
     "expect": true
   },
   "rules": {
-    "object-curly-spacing": ["error", "always"]
+    "object-curly-spacing": ["error", "always"],
+    "arrow-parens": ["error", "as-needed"],
+    "react/jsx-curly-spacing": ["error", "always"]
   }
 }
