--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3010",
     "webpack": "webpack",
     "commit": "commit-wizard",
-    "lint": "semistandard",
-    "ci": "npm run lint && npm run testOnce",
+    "lint": "eslint . --ignore-path .gitignore",
     "test": "npm run testOnce -- -w",
     "testOnce": "mocha --compilers js:babel-core/register 'client/**/*.spec.js'",
     "startTest": "NODE_ENV=tests npm start",
@@ -30,6 +29,9 @@
     "babel-runtime": "^6.5.0",
     "chai": "3.5.0",
     "css-loader": "^0.23.1",
+    "eslint": "^3.0.1",
+    "eslint-config-standard": "^5.3.1",
+    "eslint-plugin-promise": "^1.3.2",
     "file-loader": "^0.8.5",
     "json-loader": "^0.5.4",
     "mocha": "^2.4.5",
@@ -65,9 +67,6 @@
     "react-tap-event-plugin": "^1.0.0",
     "web3": "^0.15.3",
     "whatwg-fetch": "^1.0.0"
-  },
-  "semistandard": {
-    "parser": "babel-eslint"
   },
   "config": {
     "pre-git": {
