--- a/extension/package.json
+++ b/extension/package.json
@@ -41,7 +41,9 @@
     "eslint": "^2.5.3",
     "eslint-config-semistandard": "^6.0.2",
     "eslint-config-standard": "^5.3.1",
+    "eslint-config-standard-react": "^2.5.0",
     "eslint-plugin-promise": "^1.3.2",
+    "eslint-plugin-react": "^5.2.2",
     "eslint-plugin-standard": "^1.3.2",
     "json-loader": "0.5.4",
     "minimist": "^1.2.0",
