--- a/status/web/package.json
+++ b/status/web/package.json
@@ -44,7 +44,7 @@
     "babel-runtime": "^6.5.0",
     "chai": "3.5.0",
     "chai-enzyme": "^0.4.2",
-    "chromedriver": "2.21.2",
+    "chromedriver": "^2.21.2",
     "classnames": "^2.2.3",
     "coveralls": "^2.11.9",
     "css-loader": "^0.23.1",
