--- a/home/web/package.json
+++ b/home/web/package.json
@@ -8,7 +8,7 @@
     "webpack": "webpack",
     "commit": "commit-wizard",
     "lint": "eslint . --ignore-path ../.gitignore",
-    "test": "mocha --compilers js:babel-core/register 'client/**/*.spec.js'",
+    "test": "mocha --compilers js:babel-core/register \"client/**/*.spec.js\"",
     "prebuild": "npm run clean",
     "build": "webpack --bail --progress --colors",
     "clean": "rm static -rf"
