Fixing windows build

--- a/signer/web/package.json
+++ b/signer/web/package.json
@@ -9,8 +9,8 @@
     "webpack": "webpack --progress --colors",
     "coveralls": "npm run testCoverage && coveralls < coverage/lcov.info",
     "lint": "eslint --ignore-path ../.gitignore .",
-    "test": "mocha 'src/**/*.spec.js'",
-    "testCoverage": "istanbul cover _mocha -- 'src/**/*.spec.js'",
+    "test": "mocha \"src/**/*.spec.js\"",
+    "testCoverage": "istanbul cover _mocha -- \"src/**/*.spec.js\"",
     "nightwatch": "NODE_ENV=tests nightwatch",
     "nightwatchCI": "npm run nightwatch  -- -e saucelabs",
     "prebuild": "npm run clean",
