--- a/components/package.json
+++ b/components/package.json
@@ -36,6 +36,11 @@
     "material-ui": "^0.15.0",
     "react-addons-css-transition-group": "^15.1.0",
     "react-tap-event-plugin": "^1.0.0",
+    "bignumber.js": "^2.3.0",
+    "blockies": "git+https://github.com/tomusdrw/blockies#master",
+    "classnames": "^2.2.3",
+    "ethereum-rpc-json": "*",
+    "lodash.isequal": "^4.2.0",
     "react-tooltip": "^2.0.3"
   },
   "devDependencies": {
@@ -72,35 +77,15 @@
     "mocha": "^2.4.5",
     "mock-local-storage": "1.0.2",
     "postcss-loader": "^0.8.1",
-    "react": "^15.0.0",
-    "react-addons-css-transition-group": "^15.1.0",
-    "react-addons-test-utils": "15.1.0",
-    "react-dom": "^15.0.0",
-    "react-hot-loader": "^1.3.0",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.4.1",
-    "react-router-redux": "^4.0.5",
-    "react-tap-event-plugin": "^1.0.0",
-    "react-tooltip": "^2.0.3",
-    "redux": "^3.5.2",
-    "redux-actions": "^0.10.0",
     "rucksack-css": "^0.8.5",
     "semistandard": "^7.0.5",
     "sinon": "1.17.3",
     "sinon-chai": "2.8.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
-    "web3": "0.16.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
     "webpack-error-notification": "0.1.6",
     "webpack-hot-middleware": "^2.7.1"
-  },
-  "dependencies": {
-    "bignumber.js": "^2.3.0",
-    "blockies": "git+https://github.com/tomusdrw/blockies#master",
-    "classnames": "^2.2.3",
-    "ethereum-rpc-json": "*",
-    "lodash.isequal": "^4.2.0"
   }
 }
