--- a/signer/web/package.json
+++ b/signer/web/package.json
@@ -41,8 +41,7 @@
     "exports-loader": "0.6.3",
     "history": "^2.1.1",
     "js-sha3": "^0.5.2",
-    "lodash.assign": "^4.0.9",
-    "lodash.isequal": "4.2.0",
+    "lodash": "*",
     "material-ui": "^0.15.0",
     "rc-slider": "^3.7.1",
     "react": "^15.0.2",
