--- a/components/package.json
+++ b/components/package.json
@@ -40,7 +40,7 @@
     "blockies": "git+https://github.com/tomusdrw/blockies#master",
     "classnames": "^2.2.3",
     "ethereum-rpc-json": "*",
-    "lodash.isequal": "^4.2.0",
+    "lodash": "*",
     "react-tooltip": "^2.0.3"
   },
   "devDependencies": {
