--- a/extension/package.json
+++ b/extension/package.json
@@ -65,8 +65,7 @@
     "classnames": "^2.1.3",
     "exports-loader": "0.6.3",
     "js-sha3": "^0.5.2",
-    "lodash.assign": "^4.0.9",
-    "lodash.isequal": "4.2.0",
+    "lodash": "*",
     "material-ui": "^0.15.0",
     "parity-signer": "../signer/web/",
     "react": "^15.0.2",
