import blockies from npm
previous one was breaking components, and required epxorts loader

--- a/home/web/package.json
+++ b/home/web/package.json
@@ -53,9 +53,8 @@
     "lodash": "*",
     "babel-polyfill": "^6.9.1",
     "bignumber.js": "2.3.0",
-    "blockies": "git+https://github.com/tomusdrw/blockies#master",
+    "blockies": "blockies",
     "classnames": "^2.2.3",
-    "exports-loader": "^0.6.3",
     "material-ui": "0.15.0",
     "react-copy-to-clipboard": "^4.1.0",
     "react-tap-event-plugin": "^1.0.0",
