--- a/components/package.json
+++ b/components/package.json
@@ -37,7 +37,7 @@
     "react-addons-css-transition-group": "^15.1.0",
     "react-tap-event-plugin": "^1.0.0",
     "bignumber.js": "^2.3.0",
-    "blockies": "git+https://github.com/tomusdrw/blockies#master",
+    "blockies": "blockies",
     "classnames": "^2.2.3",
     "ethereum-rpc-json": "*",
     "lodash": "*",
@@ -65,7 +65,6 @@
     "eslint-plugin-promise": "^1.1.0",
     "eslint-plugin-react": "^5.1.1",
     "eslint-plugin-standard": "^1.3.2",
-    "exports-loader": "0.6.3",
     "file-loader": "^0.8.5",
     "history": "^3.0.0",
     "ignore-styles": "2.0.0",
