--- a/home/web/package.json
+++ b/home/web/package.json
@@ -4,6 +4,7 @@
   "description": "Parity Home Page & TopBar",
   "main": "client/index.js",
   "scripts": {
+    "postinstall": "npm link ../../components",
     "start": "webpack-dev-server -d --history-api-fallback --open --hot --inline --progress --colors --port 3010",
     "webpack": "webpack",
     "commit": "commit-wizard",
@@ -50,11 +51,12 @@
     "webpack-hot-middleware": "^2.7.1"
   },
   "dependencies": {
-    "lodash": "*",
     "babel-polyfill": "^6.9.1",
     "bignumber.js": "2.3.0",
     "blockies": "blockies",
     "classnames": "^2.2.3",
+    "dapps-react-components": "../../components",
+    "lodash": "*",
     "material-ui": "0.15.0",
     "react-copy-to-clipboard": "^4.1.0",
     "react-tap-event-plugin": "^1.0.0",
