--- a/status/web/package.json
+++ b/status/web/package.json
@@ -92,10 +92,12 @@
   },
   "dependencies": {
     "bignumber.js": "2.3.0",
+    "blockies": "*",
     "browser-request": "0.3.3",
     "bytes": "2.3.0",
     "dapp-styles": "^0.2.2",
     "dapps-react-components": "../../components",
+    "ethereum-rpc-json": "0.0.1",
     "format-json": "1.0.3",
     "format-number": "2.0.1",
     "history": "2.1.1",
