--- a/components/package.json
+++ b/components/package.json
@@ -37,7 +37,7 @@
     "react-addons-css-transition-group": "^15.1.0",
     "react-tap-event-plugin": "^1.0.0",
     "bignumber.js": "^2.3.0",
-    "blockies": "blockies",
+    "blockies": "*",
     "classnames": "^2.2.3",
     "ethereum-rpc-json": "*",
     "lodash": "*",
@@ -72,7 +72,6 @@
     "istanbul": "0.4.3",
     "jsdom": "9.2.1",
     "json-loader": "^0.5.4",
-    "material-ui": "^0.15.0",
     "mocha": "^2.4.5",
     "mock-local-storage": "1.0.2",
     "postcss-loader": "^0.8.1",
