--- a/extension/package.json
+++ b/extension/package.json
@@ -60,18 +60,27 @@
     "webpack-httpolyglot-server": "^0.2.0"
   },
   "dependencies": {
+    "axios": "^0.12.0",
+    "babel-polyfill": "^6.9.1",
     "bluebird": "^3.3.4",
     "chrome-badge-animator": "0.0.0",
     "classnames": "^2.1.3",
+    "dapps-react-components": "../components",
+    "ethereum-rpc-json": "0.0.1",
+    "history": "^3.0.0",
     "js-sha3": "^0.5.2",
     "lodash": "*",
     "material-ui": "^0.15.0",
     "parity-signer": "../signer/web/",
+    "rc-slider": "^3.7.4",
     "react": "^15.0.2",
+    "react-addons-css-transition-group": "^15.2.1",
+    "react-copy-to-clipboard": "^4.2.1",
     "react-dock": "^0.2.3",
     "react-dom": "^15.0.2",
     "react-redux": "^4.3.0",
     "react-tap-event-plugin": "^1.0.0",
+    "react-tooltip": "^3.0.10",
     "redux": "^3.2.1",
     "redux-actions": "0.9.1",
     "redux-thunk": "^2.0.1",
