--- a/extension/.babelrc
+++ b/extension/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["es2015", "stage-0"],
+  "presets": ["es2015", "stage-0", "react"],
   "plugins": ["add-module-exports", "transform-decorators-legacy", "transform-runtime"],
   "env": {
     "test": {
