--- a/home/web/package.json
+++ b/home/web/package.json
@@ -56,8 +56,10 @@
     "classnames": "^2.2.3",
     "dapps-react-components": "../../components",
     "lodash": "*",
-    "material-ui": "0.15.0",
+    "material-ui": "^0.15.2",
+    "react": "^15.2.1",
     "react-copy-to-clipboard": "^4.1.0",
+    "react-dom": "^15.2.1",
     "react-tap-event-plugin": "^1.0.0",
     "web3": "^0.15.3",
     "whatwg-fetch": "^1.0.0"
