--- a/extension/package.json
+++ b/extension/package.json
@@ -76,7 +76,7 @@
     "ethereum-rpc-json": "0.0.1",
     "history": "^2.0.0",
     "js-sha3": "^0.5.2",
-    "lodash": "*",
+    "lodash": "4.11.1",
     "material-ui": "^0.15.0",
     "parity-signer": "../signer/web/",
     "rc-slider": "^3.7.4",
