--- a/signer/web/package.json
+++ b/signer/web/package.json
@@ -40,7 +40,7 @@
     "event-emitter": "^0.3.4",
     "history": "^2.1.1",
     "js-sha3": "^0.5.2",
-    "lodash": "*",
+    "lodash": "4.11.1",
     "material-ui": "^0.15.0",
     "rc-slider": "^3.7.1",
     "react": "^15.0.2",
