--- a/components/package.json
+++ b/components/package.json
@@ -76,6 +76,8 @@
     "mock-local-storage": "1.0.2",
     "postcss-loader": "^0.8.1",
     "rucksack-css": "^0.8.5",
+    "babel-plugin-lodash": "^3.2.2",
+    "lodash-webpack-plugin": "^0.9.2",
     "semistandard": "^7.0.5",
     "sinon": "1.17.3",
     "sinon-chai": "2.8.0",
