--- a/extension/.babelrc
+++ b/extension/.babelrc
@@ -1,6 +1,6 @@
 {
   "presets": ["es2015", "stage-0", "react"],
-  "plugins": ["add-module-exports", "transform-decorators-legacy", "transform-runtime"],
+  "plugins": ["add-module-exports", "transform-decorators-legacy", "transform-runtime", "lodash"],
   "env": {
     "test": {
       "plugins": [
