--- a/extension/package.json
+++ b/extension/package.json
@@ -63,6 +63,8 @@
     "webpack-copy-on-done-plugin": "0.0.9",
     "webpack-error-notification": "^0.1.6",
     "webpack-hot-middleware": "^2.10.0",
+    "babel-plugin-lodash": "^3.2.2",
+    "lodash-webpack-plugin": "^0.9.2",
     "webpack-httpolyglot-server": "^0.2.0"
   },
   "dependencies": {
