--- a/home/web/package.json
+++ b/home/web/package.json
@@ -19,6 +19,7 @@
     "babel-core": "^6.5.2",
     "babel-eslint": "6.0.2",
     "babel-loader": "^6.2.3",
+    "babel-plugin-lodash": "^3.2.2",
     "babel-plugin-transform-runtime": "^6.5.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
@@ -31,6 +32,7 @@
     "eslint-plugin-promise": "^1.3.2",
     "file-loader": "^0.8.5",
     "json-loader": "^0.5.4",
+    "lodash-webpack-plugin": "^0.9.2",
     "mocha": "^2.4.5",
     "mock-local-storage": "1.0.2",
     "nightwatch": "0.8.18",
