--- a/extension/package.json
+++ b/extension/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Parity Web Extension",
   "scripts": {
-    "postinstall": "npm link ../signer/web",
+    "postinstall": "npm link ../signer/web && npm link ../components",
     "start": "npm run devBuild -- -w --port 3030",
     "devBuild": "webpack --progress --colors",
     "build": "NODE_ENV=production npm run devBuild",
@@ -68,33 +68,8 @@
     "webpack-httpolyglot-server": "^0.2.0"
   },
   "dependencies": {
-    "axios": "^0.12.0",
-    "babel-polyfill": "^6.9.1",
-    "blockies": "0.0.2",
-    "bluebird": "^3.3.4",
     "chrome-badge-animator": "0.0.0",
-    "classnames": "^2.1.3",
-    "dapps-react-components": "../components",
-    "ethereum-rpc-json": "0.0.1",
-    "history": "^2.0.0",
-    "js-sha3": "^0.5.2",
-    "lodash": "4.11.1",
-    "material-ui": "^0.15.0",
     "parity-signer": "../signer/web/",
-    "rc-slider": "^3.7.4",
-    "react": "^15.2.1",
-    "react-addons-css-transition-group": "^15.2.1",
-    "react-copy-to-clipboard": "^4.2.1",
-    "react-dock": "^0.2.3",
-    "react-dom": "^15.0.2",
-    "react-redux": "^4.3.0",
-    "react-router": "^2.5.2",
-    "react-tap-event-plugin": "^1.0.0",
-    "react-tooltip": "^3.0.10",
-    "redux": "^3.2.1",
-    "redux-actions": "0.9.1",
-    "redux-thunk": "^2.0.1",
-    "reset-css": "^2.0.2011012603",
-    "web3": "0.16.0"
+    "dapps-react-components": "../components"
   }
 }
