--- a/signer/web/package.json
+++ b/signer/web/package.json
@@ -33,29 +33,6 @@
     "url": "https://github.com/ethcore/parity-sysui-app/issues"
   },
   "homepage": "https://github.com/ethcore/parity-sysui-app#readme",
-  "peerDependencies": {
-    "axios": "^0.12.0",
-    "babel-polyfill": "^6.9.1",
-    "dapps-react-components": "../../components",
-    "event-emitter": "^0.3.4",
-    "history": "^2.1.1",
-    "js-sha3": "^0.5.2",
-    "lodash": "4.11.1",
-    "material-ui": "^0.15.0",
-    "rc-slider": "^3.7.1",
-    "react": "^15.0.2",
-    "react-addons-css-transition-group": "^15.0.2",
-    "react-copy-to-clipboard": "4.1.0",
-    "react-dom": "^15.0.2",
-    "react-redux": "^4.3.0",
-    "react-tap-event-plugin": "^1.0.0",
-    "react-tooltip": "^2.0.3",
-    "redux": "^3.2.1",
-    "redux-actions": "0.9.1",
-    "redux-thunk": "^2.0.1",
-    "reset-css": "^2.0.2011012603",
-    "web3": "0.16.0"
-  },
   "devDependencies": {
     "babel-core": "^6.3.15",
     "babel-eslint": "^6.0.4",
@@ -120,5 +97,31 @@
     "webpack-httpolyglot-server": "^0.2.0",
     "why-did-you-update": "0.0.8",
     "xhr-interceptor": "^1.3.0"
+  },
+  "dependencies": {
+    "axios": "^0.12.0",
+    "babel-polyfill": "^6.9.1",
+    "bignumber.js": "^2.3.0",
+    "blockies": "0.0.2",
+    "dapps-react-components": "../../components",
+    "ethereum-rpc-json": "0.0.1",
+    "event-emitter": "^0.3.4",
+    "history": "^2.1.1",
+    "js-sha3": "^0.5.2",
+    "lodash": "4.11.1",
+    "material-ui": "^0.15.0",
+    "rc-slider": "^3.7.1",
+    "react": "^15.0.2",
+    "react-addons-css-transition-group": "^15.0.2",
+    "react-copy-to-clipboard": "4.1.0",
+    "react-dom": "^15.0.2",
+    "react-redux": "^4.3.0",
+    "react-tap-event-plugin": "^1.0.0",
+    "react-tooltip": "^2.0.3",
+    "redux": "^3.2.1",
+    "redux-actions": "0.9.1",
+    "redux-thunk": "^2.0.1",
+    "reset-css": "^2.0.2011012603",
+    "web3": "0.16.0"
   }
 }
