--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -1,14 +1,13 @@
 [package]
 name = "parity-dapps-signer"
-version = "0.2.0"
+version = "0.6.0"
 license = "GPL-3.0"
 authors = ["Ethcore <admin@ethcore.io>"]
 build = "build.rs"
 
 [features]
 # default = ["dev"]
-default = ["with-syntex"]
-with-syntex = ["parity-dapps/with-syntex"]
+default = ["parity-dapps/with-syntex", "parity-dapps/use-precompiled-js"]
 
 [build-dependencies]
 parity-dapps = { path = "../dapps" }
