--- a/signer/web/package.json
+++ b/signer/web/package.json
@@ -15,7 +15,7 @@
     "nightwatchCI": "npm run nightwatch  -- -e saucelabs",
     "prebuild": "npm run clean",
     "build": "webpack --progress --colors --bail",
-    "clean": "rm build -rf || true",
+    "clean": "rm -rf ../src/web && rm -rf target",
     "commit": "commit-wizard"
   },
   "repository": {
