Adding dev feature to signer

--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -8,6 +8,7 @@ build = "build.rs"
 [features]
 # default = ["dev"]
 default = ["with-syntex"]
+dev = []
 with-syntex = ["parity-dapps/with-syntex"]
 
 [build-dependencies]
