--- a/status/web/package.json
+++ b/status/web/package.json
@@ -11,8 +11,8 @@
     "commit": "commit-wizard",
     "coveralls": "npm run testCoverage && coveralls < coverage/lcov.info",
     "lint": "eslint --ignore-path ../../.gitignore .",
-    "test": "mocha 'client/**/*.spec.js'",
-    "testCoverage": "istanbul cover _mocha -- 'client/**/*.spec.js'",
+    "test": "mocha \"client/**/*.spec.js\"",
+    "testCoverage": "istanbul cover _mocha -- \"client/**/*.spec.js\"",
     "nightwatch": "NODE_ENV=tests nightwatch",
     "nightwatchCI": "npm run nightwatch  -- -e saucelabs",
     "prebuild": "npm run clean",
