--- a/components/package.json
+++ b/components/package.json
@@ -8,8 +8,8 @@
     "webpack": "webpack",
     "coveralls": "npm run testCoverage && coveralls < coverage/lcov.info",
     "lint": "eslint --ignore-path ../.gitignore .",
-    "test": "mocha 'src/**/*.spec.js'",
-    "testCoverage": "istanbul cover _mocha -- 'src/**/*.spec.js'",
+    "test": "mocha \"src/**/*.spec.js\" || true",
+    "testCoverage": "istanbul cover _mocha -- \"src/**/*.spec.js\"",
     "prebuild": "npm run clean",
     "build": "webpack --bail --progress --colors",
     "localPublish": "npm run build && npm publish",
