--- a/extension/package.json
+++ b/extension/package.json
@@ -11,7 +11,7 @@
     "genZip": "npm run build && npm run compress",
     "clean": "rimraf build/ dev/ *.zip *.crx",
     "lint": "eslint . --ignore-path ../.gitignore",
-    "test": "mocha 'chrome/**/*.spec.js'"
+    "test": "mocha \"chrome/**/*.spec.js\""
   },
   "repository": {
     "type": "git",
