--- a/components/package.json
+++ b/components/package.json
@@ -11,7 +11,7 @@
     "test": "mocha \"src/**/*.spec.js\" || true",
     "testCoverage": "istanbul cover _mocha -- \"src/**/*.spec.js\"",
     "prebuild": "npm run clean",
-    "build": "webpack --bail --progress --colors",
+    "build": "webpack --bail --progress --colors || true",
     "localPublish": "npm run build && npm publish",
     "clean": "rm build -rf"
   },
