--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ cache:
 
 install:
   - rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && (cd ~/.nvm && git checkout `git describe --abbrev=0 --tags`) && source ~/.nvm/nvm.sh && nvm install $TRAVIS_NODE_VERSION
+  - ./web.sh install
 
 script:
   - if [ "$BUILD" = "rust" ]; then ./scripts/build_rs.sh; fi
