Fixing env variables

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,14 @@ branches:
 
 env:
   global:
-    - TRAVIS_NODE_VERSION="5"
+    - TRAVIS_NODE_VERSION="6"
 
-rust:
-  - stable
-
-env:
-  - BUILD=rust
-  - BUILD=js
+matrix:
+  include:
+    - rust: stable
+      env: BUILD=rust
+    - rust: stable
+      env: BUILD=js
 
 cache:
   directories:
