--- a/home/web/package.json
+++ b/home/web/package.json
@@ -32,13 +32,12 @@
     "eslint-plugin-promise": "^1.3.2",
     "file-loader": "^0.8.5",
     "json-loader": "^0.5.4",
-    
     "mocha": "^2.4.5",
     "mock-local-storage": "1.0.2",
     "nightwatch": "0.8.18",
     "postcss-loader": "^0.8.1",
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
     "react-hot-loader": "^1.3.0",
     "react-router": "^2.0.0",
     "rucksack-css": "^0.8.5",
@@ -59,7 +58,8 @@
     "classnames": "^2.2.3",
     "dapps-react-components": "../../components",
     "lodash": "4.11.1",
-    "material-ui": "0.15.0",
+    "material-ui": "0.15.2",
+    "react-addons-css-transition-group": "^15.2.1",
     "react-copy-to-clipboard": "^4.1.0",
     "react-tap-event-plugin": "^1.0.0",
     "web3": "^0.15.3",
